# django-docker-template

./: .env  .gitignore  404.html  Dockerfile  docker-compose.debug.yml  docker-compose.tls.yml  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
website/: conftest.py  pytest.ini
website/apps/core/: middleware.py
website/apps/polls/api/: __init__.py
website/apps/polls/api/v1/: docstring.py  schema.py  urls.py  views.py
website/website/: api.py  settings.py  urls.py
website/website/settings/: __init__.py
website/website/settings/components/: base.py  cors.py  database.py  rest_framework.py  security.py  testcontainers.py
website/website/settings/environments/: development.py  production.py  test.py
