[project]
name = "django-docker-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.13.1",
    "django>=5.2.9",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "secure>=1.0.1",
    "wait-for-it>=2.3.0",
]
